# FastSDL

./: .gitmodules  CMakeLists.txt  FastSDL.cpp  FastSDL.h
Core/: Color4.h  Matrix22.h  Matrix33.h  Matrix44.h  Triangle.h  Vector2.h  Vector3.h  Vector4.h
Render/: BaseRenderer.h  Component.cpp  Component.h  RenderObject.cpp  RenderObject.h  RendererSettings.h  RendererState.h
Render/Sdl/: SdlRenderer.cpp  SdlRenderer.h
